test/fail/classes/wrong_arg_count_class_method.lly
#[
SyntaxError: Wrong number of arguments to String.ends_with (3 for 2).
    from wrong_arg_count_class_method.lly:6:
]#

String.ends_with("a", "b", "c")
